# TermiPixel

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: USAGE.md
include/TermiPixel/: ascii_converter.hpp  image_processor.hpp
src/: ascii_converter.cpp  image_processor.cpp  main.cpp
tests/: test_converter.cpp
